Mon Oct  3 19:10:47 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Use $(srcdir) to find manual page for make install.

Thu Sep 29 15:52:22 1994  Theodore Y. Ts'o  (tytso@dcl)

	* dump.c (update_ok_file): Make sure mod time on the dump_ok file
		is updated.  (Some systems don't update the mod-time when
		a file is opened for writing.)

	* Makefile.in: Relink executable when libraries change.

	* kdb5_edit.c (show_principal): Pass variable with correct type to
		ctime().

	* tcl_wrapper.c (doquit):
	  ss_wrapper.c (main):
	  kdb5_edit.c:
	  dump.c: Exit with a non-zero exit status if there was an error
	  	  in a executed command.

Thu Sep 15 11:00:30 1994  Theodore Y. Ts'o  (tytso@dcl)

	* dump.c (load_db): Fix error string on failed fopen. ("for
		writing" -> "for reading")

